<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password      </string>
    <string name="repass">Password conf.</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree">I agree</string>
    <string name="send">Confirm</string>
    <string name="title_activity_login_result">Results</string>
    <string name="error">Your passwords doesnt match</string>
    <string name="days">Day</string>
    <string name="months">Month</string>
    <string name="years">Year</string>
    <string name="birth">Date of Birth</string>
      <string name="login_state">CORRECT</string>
      <string name="password_state">CORRECT</string>
      <string name="email_state">CORRECT</string>
    

    <string-array name="day_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="year_arrays">
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
    </string-array>
    <string-array name="month_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="title_activity_errors">Errors</string>

</resources>