<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Errors" >

    <TextView
        android:id="@+id/error1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_state"
        android:textAppearance="?android:attr/textAppearanceLarge" />
      <TextView
        android:id="@+id/error2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_state"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
        android:id="@+id/error3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_state"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>